# nostr-keygen

./: .gitignore  README.md  main.py  nostr-keygen  pyproject.toml
.hist/: README.1757373518.143.md
nostr_keygen.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
