[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nostr-keygen"
version = "0.1.1"
description = "Terminal tool to generate nostr npub/nsec from file entropy"
authors = [{name = "Your Name", email = "you@example.com"}]
readme = "README.md"
requires-python = ">=3.8"
dependencies = ["ecdsa", "bech32"]

[project.scripts]
nostr-keygen = "main:main"